--- a/reviewing-bugs.html
+++ b/reviewing-bugs.html
@@ -32,7 +32,7 @@
   
   
 <link rel="prev" href="bug-tracking.html"/>
-<link rel="next" href="FixBug.html"/>
+<link rel="next" href="finding-the-source.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -182,25 +182,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.4" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>4.4</b> Example of a bug review submitted on Bugzilla</a></li>
 <li class="chapter" data-level="4.5" data-path="reviewing-bugs.html"><a href="reviewing-bugs.html#see-also-2"><i class="fa fa-check"></i><b>4.5</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="FixBug.html"><a href="FixBug.html"><i class="fa fa-check"></i><b>5</b> Lifecycle of a Patch</a><ul>
-<li class="chapter" data-level="5.1" data-path="FixBug.html"><a href="FixBug.html#introduction"><i class="fa fa-check"></i><b>5.1</b> Introduction</a></li>
-<li class="chapter" data-level="5.2" data-path="FixBug.html"><a href="FixBug.html#when-do-you-submit-a-patch"><i class="fa fa-check"></i><b>5.2</b> When do you submit a patch?</a></li>
-<li class="chapter" data-level="5.3" data-path="FixBug.html"><a href="FixBug.html#what-tools-are-required-to-submit-a-patch"><i class="fa fa-check"></i><b>5.3</b> What tools are required to submit a patch?</a></li>
-<li class="chapter" data-level="5.4" data-path="FixBug.html"><a href="FixBug.html#how-to-prepare-a-patch"><i class="fa fa-check"></i><b>5.4</b> How to prepare a patch?</a></li>
-<li class="chapter" data-level="5.5" data-path="FixBug.html"><a href="FixBug.html#GoodPatches"><i class="fa fa-check"></i><b>5.5</b> Making good patches</a></li>
-<li class="chapter" data-level="5.6" data-path="FixBug.html"><a href="FixBug.html#submitting-your-patch-for-review"><i class="fa fa-check"></i><b>5.6</b> Submitting your patch for review</a></li>
-<li class="chapter" data-level="5.7" data-path="FixBug.html"><a href="FixBug.html#getting-your-patch-reviewed"><i class="fa fa-check"></i><b>5.7</b> Getting your patch reviewed</a><ul>
-<li class="chapter" data-level="5.7.1" data-path="FixBug.html"><a href="FixBug.html#how-to-review-a-patch"><i class="fa fa-check"></i><b>5.7.1</b> How to review a patch?</a></li>
-</ul></li>
-<li class="chapter" data-level="5.8" data-path="FixBug.html"><a href="FixBug.html#leaving-a-patch-review-on-bugzilla"><i class="fa fa-check"></i><b>5.8</b> Leaving a patch review on Bugzilla</a></li>
-<li class="chapter" data-level="5.9" data-path="FixBug.html"><a href="FixBug.html#dismissing-review-from-another-core-developer"><i class="fa fa-check"></i><b>5.9</b> Dismissing review from another core developer</a></li>
-<li class="chapter" data-level="5.10" data-path="FixBug.html"><a href="FixBug.html#acceptance-or-rejection-of-your-patch"><i class="fa fa-check"></i><b>5.10</b> Acceptance or rejection of your patch</a></li>
-<li class="chapter" data-level="5.11" data-path="FixBug.html"><a href="FixBug.html#examples-of-patch-reports-on-bugzilla"><i class="fa fa-check"></i><b>5.11</b> Examples of patch reports on Bugzilla</a></li>
-<li class="chapter" data-level="5.12" data-path="FixBug.html"><a href="FixBug.html#examples-of-reviewing-a-patch"><i class="fa fa-check"></i><b>5.12</b> Examples of reviewing a patch</a></li>
-<li class="chapter" data-level="5.13" data-path="FixBug.html"><a href="FixBug.html#see-also-3"><i class="fa fa-check"></i><b>5.13</b> See also</a></li>
+<li class="chapter" data-level="5" data-path="finding-the-source.html"><a href="finding-the-source.html"><i class="fa fa-check"></i><b>5</b> Finding the Source</a><ul>
+<li class="chapter" data-level="5.1" data-path="finding-the-source.html"><a href="finding-the-source.html#finding-r-source-code"><i class="fa fa-check"></i><b>5.1</b> Finding R source code</a></li>
+<li class="chapter" data-level="5.2" data-path="finding-the-source.html"><a href="finding-the-source.html#finding-c-source-code"><i class="fa fa-check"></i><b>5.2</b> Finding C source code</a></li>
+<li class="chapter" data-level="5.3" data-path="finding-the-source.html"><a href="finding-the-source.html#see-also-3"><i class="fa fa-check"></i><b>5.3</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="documenting-r.html"><a href="documenting-r.html"><i class="fa fa-check"></i><b>6</b> Documenting R</a><ul>
-<li class="chapter" data-level="6.1" data-path="documenting-r.html"><a href="documenting-r.html#introduction-1"><i class="fa fa-check"></i><b>6.1</b> Introduction</a></li>
+<li class="chapter" data-level="6.1" data-path="documenting-r.html"><a href="documenting-r.html#introduction"><i class="fa fa-check"></i><b>6.1</b> Introduction</a></li>
 <li class="chapter" data-level="6.2" data-path="documenting-r.html"><a href="documenting-r.html#guidelines-for-writing-the-system-help-files-in-.rd-format"><i class="fa fa-check"></i><b>6.2</b> Guidelines for writing the system help files (in .Rd format)</a></li>
 <li class="chapter" data-level="6.3" data-path="documenting-r.html"><a href="documenting-r.html#helping-with-documentation"><i class="fa fa-check"></i><b>6.3</b> Helping with documentation</a></li>
 <li class="chapter" data-level="6.4" data-path="documenting-r.html"><a href="documenting-r.html#proofreading"><i class="fa fa-check"></i><b>6.4</b> Proofreading</a></li>
@@ -208,24 +196,36 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="6.6" data-path="documenting-r.html"><a href="documenting-r.html#instructions-for-reporting-the-cran-policy-bugs-discussion-in-slack-random-channel"><i class="fa fa-check"></i><b>6.6</b> Instructions for reporting the CRAN policy bugs – discussion in slack (random channel)</a></li>
 <li class="chapter" data-level="6.7" data-path="documenting-r.html"><a href="documenting-r.html#see-also-4"><i class="fa fa-check"></i><b>6.7</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="7" data-path="TestRCode.html"><a href="TestRCode.html"><i class="fa fa-check"></i><b>7</b> Testing R code</a><ul>
-<li class="chapter" data-level="7.1" data-path="TestRCode.html"><a href="TestRCode.html#where-to-test"><i class="fa fa-check"></i><b>7.1</b> Where to test?</a><ul>
-<li class="chapter" data-level="7.1.1" data-path="TestRCode.html"><a href="TestRCode.html#VM"><i class="fa fa-check"></i><b>7.1.1</b> Virtual machine</a></li>
+<li class="chapter" data-level="7" data-path="FixBug.html"><a href="FixBug.html"><i class="fa fa-check"></i><b>7</b> Lifecycle of a Patch</a><ul>
+<li class="chapter" data-level="7.1" data-path="FixBug.html"><a href="FixBug.html#introduction-1"><i class="fa fa-check"></i><b>7.1</b> Introduction</a></li>
+<li class="chapter" data-level="7.2" data-path="FixBug.html"><a href="FixBug.html#when-do-you-submit-a-patch"><i class="fa fa-check"></i><b>7.2</b> When do you submit a patch?</a></li>
+<li class="chapter" data-level="7.3" data-path="FixBug.html"><a href="FixBug.html#what-tools-are-required-to-submit-a-patch"><i class="fa fa-check"></i><b>7.3</b> What tools are required to submit a patch?</a></li>
+<li class="chapter" data-level="7.4" data-path="FixBug.html"><a href="FixBug.html#how-to-prepare-a-patch"><i class="fa fa-check"></i><b>7.4</b> How to prepare a patch?</a></li>
+<li class="chapter" data-level="7.5" data-path="FixBug.html"><a href="FixBug.html#GoodPatches"><i class="fa fa-check"></i><b>7.5</b> Making good patches</a></li>
+<li class="chapter" data-level="7.6" data-path="FixBug.html"><a href="FixBug.html#submitting-your-patch-for-review"><i class="fa fa-check"></i><b>7.6</b> Submitting your patch for review</a></li>
+<li class="chapter" data-level="7.7" data-path="FixBug.html"><a href="FixBug.html#getting-your-patch-reviewed"><i class="fa fa-check"></i><b>7.7</b> Getting your patch reviewed</a><ul>
+<li class="chapter" data-level="7.7.1" data-path="FixBug.html"><a href="FixBug.html#how-to-review-a-patch"><i class="fa fa-check"></i><b>7.7.1</b> How to review a patch?</a></li>
 </ul></li>
-<li class="chapter" data-level="7.2" data-path="TestRCode.html"><a href="TestRCode.html#what-can-you-test"><i class="fa fa-check"></i><b>7.2</b> What can you test?</a></li>
-<li class="chapter" data-level="7.3" data-path="TestRCode.html"><a href="TestRCode.html#writing-tests-for-r"><i class="fa fa-check"></i><b>7.3</b> Writing tests for R</a></li>
-<li class="chapter" data-level="7.4" data-path="TestRCode.html"><a href="TestRCode.html#benchmarks"><i class="fa fa-check"></i><b>7.4</b> Benchmarks</a></li>
+<li class="chapter" data-level="7.8" data-path="FixBug.html"><a href="FixBug.html#leaving-a-patch-review-on-bugzilla"><i class="fa fa-check"></i><b>7.8</b> Leaving a patch review on Bugzilla</a></li>
+<li class="chapter" data-level="7.9" data-path="FixBug.html"><a href="FixBug.html#dismissing-review-from-another-core-developer"><i class="fa fa-check"></i><b>7.9</b> Dismissing review from another core developer</a></li>
+<li class="chapter" data-level="7.10" data-path="FixBug.html"><a href="FixBug.html#acceptance-or-rejection-of-your-patch"><i class="fa fa-check"></i><b>7.10</b> Acceptance or rejection of your patch</a></li>
+<li class="chapter" data-level="7.11" data-path="FixBug.html"><a href="FixBug.html#examples-of-patch-reports-on-bugzilla"><i class="fa fa-check"></i><b>7.11</b> Examples of patch reports on Bugzilla</a></li>
+<li class="chapter" data-level="7.12" data-path="FixBug.html"><a href="FixBug.html#examples-of-reviewing-a-patch"><i class="fa fa-check"></i><b>7.12</b> Examples of reviewing a patch</a></li>
+<li class="chapter" data-level="7.13" data-path="FixBug.html"><a href="FixBug.html#see-also-5"><i class="fa fa-check"></i><b>7.13</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="developer-tools.html"><a href="developer-tools.html"><i class="fa fa-check"></i><b>8</b> Developer tools</a><ul>
-<li class="chapter" data-level="8.1" data-path="developer-tools.html"><a href="developer-tools.html#subversion-svn-client"><i class="fa fa-check"></i><b>8.1</b> Subversion (svn) client</a></li>
-<li class="chapter" data-level="8.2" data-path="developer-tools.html"><a href="developer-tools.html#globally-search-for-a-regular-expression-and-print-matching-lines-grep"><i class="fa fa-check"></i><b>8.2</b> Globally search for a regular expression and print matching lines (grep)</a></li>
-<li class="chapter" data-level="8.3" data-path="developer-tools.html"><a href="developer-tools.html#git"><i class="fa fa-check"></i><b>8.3</b> Git</a></li>
-<li class="chapter" data-level="8.4" data-path="developer-tools.html"><a href="developer-tools.html#github"><i class="fa fa-check"></i><b>8.4</b> GitHub</a></li>
+<li class="chapter" data-level="8" data-path="TestRCode.html"><a href="TestRCode.html"><i class="fa fa-check"></i><b>8</b> Testing R code</a><ul>
+<li class="chapter" data-level="8.1" data-path="TestRCode.html"><a href="TestRCode.html#where-to-test"><i class="fa fa-check"></i><b>8.1</b> Where to test?</a><ul>
+<li class="chapter" data-level="8.1.1" data-path="TestRCode.html"><a href="TestRCode.html#VM"><i class="fa fa-check"></i><b>8.1.1</b> Virtual machine</a></li>
 </ul></li>
-<li class="chapter" data-level="9" data-path="finding-the-source.html"><a href="finding-the-source.html"><i class="fa fa-check"></i><b>9</b> Finding the Source</a><ul>
-<li class="chapter" data-level="9.1" data-path="finding-the-source.html"><a href="finding-the-source.html#finding-r-source-code"><i class="fa fa-check"></i><b>9.1</b> Finding R source code</a></li>
-<li class="chapter" data-level="9.2" data-path="finding-the-source.html"><a href="finding-the-source.html#finding-c-source-code"><i class="fa fa-check"></i><b>9.2</b> Finding C source code</a></li>
-<li class="chapter" data-level="9.3" data-path="finding-the-source.html"><a href="finding-the-source.html#see-also-5"><i class="fa fa-check"></i><b>9.3</b> See also</a></li>
+<li class="chapter" data-level="8.2" data-path="TestRCode.html"><a href="TestRCode.html#what-can-you-test"><i class="fa fa-check"></i><b>8.2</b> What can you test?</a></li>
+<li class="chapter" data-level="8.3" data-path="TestRCode.html"><a href="TestRCode.html#writing-tests-for-r"><i class="fa fa-check"></i><b>8.3</b> Writing tests for R</a></li>
+<li class="chapter" data-level="8.4" data-path="TestRCode.html"><a href="TestRCode.html#benchmarks"><i class="fa fa-check"></i><b>8.4</b> Benchmarks</a></li>
+</ul></li>
+<li class="chapter" data-level="9" data-path="developer-tools.html"><a href="developer-tools.html"><i class="fa fa-check"></i><b>9</b> Developer tools</a><ul>
+<li class="chapter" data-level="9.1" data-path="developer-tools.html"><a href="developer-tools.html#subversion-svn-client"><i class="fa fa-check"></i><b>9.1</b> Subversion (svn) client</a></li>
+<li class="chapter" data-level="9.2" data-path="developer-tools.html"><a href="developer-tools.html#globally-search-for-a-regular-expression-and-print-matching-lines-grep"><i class="fa fa-check"></i><b>9.2</b> Globally search for a regular expression and print matching lines (grep)</a></li>
+<li class="chapter" data-level="9.3" data-path="developer-tools.html"><a href="developer-tools.html#git"><i class="fa fa-check"></i><b>9.3</b> Git</a></li>
+<li class="chapter" data-level="9.4" data-path="developer-tools.html"><a href="developer-tools.html#github"><i class="fa fa-check"></i><b>9.4</b> GitHub</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="news-and-announcements.html"><a href="news-and-announcements.html"><i class="fa fa-check"></i><b>10</b> News and Announcements</a><ul>
 <li class="chapter" data-level="10.1" data-path="news-and-announcements.html"><a href="news-and-announcements.html#blogs"><i class="fa fa-check"></i><b>10.1</b> Blogs</a></li>
@@ -312,7 +312,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
         </div>
       </div>
 <a href="bug-tracking.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="FixBug.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="finding-the-source.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
